--- a/add-member-1.html
+++ b/add-member-1.html
@@ -23,7 +23,7 @@
 <div class="d-flex flex-md-row align-items-center p-3 px-md-4 bg-joinit-header border-bottom box-shadow fixed-top">
   <div class="container">
     <div class="row justify-content-between ">
-      <div class="col-2"><a class="navbar-brand" href="#"><img src="img/header_logo@2x.png" class="nav-logo"></a> </div>
+      <div class="col-2"><a class="navbar-brand" href="./"><img src="img/header_logo@2x.png" class="nav-logo"></a> </div>
       <!-- 登入後 PC版  NAV的選單  -->
       <div class="col-6 d-none d-lg-block d-xs-none">
         <div class="input-group ">
