--- a/index-login.html
+++ b/index-login.html
@@ -90,7 +90,7 @@
       <!-- 登入後 PC版  NAV的選單  -->
       <div class="col-6 d-none d-lg-block d-xs-none">
         <div class="input-group ">
-          <input placeholder="輸入目的地、景點、體驗行程或活動名稱..." type="text"  class="form-control" data-toggle="popover-x" data-target="#navsearch" data-placement="bottom">
+          <input placeholder="輸入目的地、景點、體驗行程或活動名稱..." type="text"  class="form-control">
           <span class="input-group-btn">
           <button class="btn" data-dismiss="popover-x"><img src="img/icon_search-2.svg" class="nav-search-icon"  > </button>
           </span></div>
