--- a/payment-step1-for-business.html
+++ b/payment-step1-for-business.html
@@ -25,34 +25,10 @@
       <div class="col-2"><a class="navbar-brand" href="#"><img src="img/header_logo@2x.png" class="nav-logo"></a> </div>      <!-- 登入後 PC版  NAV的選單  -->
 <div class="col-6 d-none d-lg-block d-xs-none">
         <div class="input-group ">
-          <input placeholder="輸入目的地、景點、體驗行程或活動名稱..." type="text"  class="form-control" data-toggle="popover-x" data-target="#navsearch" data-placement="bottom">
+          <input placeholder="輸入目的地、景點、體驗行程或活動名稱..." type="text"  class="form-control">
           <span class="input-group-btn">
           <button class="btn" data-dismiss="popover-x"><img src="img/icon_search-2.svg" class="nav-search-icon"  > </button>
           </span></div> <!-- PC 版本 NAV 搜尋功能的彈跳推薦選項  -->
-        <div id="navsearch" class="popover popover-x popover-default homePopover-box">
-          <div class="arrow"></div>
-          <div class="popover-body popover-content">
-            <h4> 熱門目的地 </h4>
-            <ul class="popover-ul">
-              <li class="popover-content-li ">
-                <button class="popover-content-btn">高雄1</button>
-              </li>
-              <li class="popover-content-li ">
-                <button class="popover-content-btn">台南</button>
-              </li>
-              <li class="popover-content-li ">
-                <button class="popover-content-btn">南投</button>
-              </li>
-              <li class="popover-content-li ">
-                <button class="popover-content-btn">台北</button>
-              </li>
-              <li class="popover-content-li ">
-                <button class="popover-content-btn">香港</button>
-              </li>
-            </ul>
-            <button class="btn btn-sm btn-primary pull-right m-3 homePopover-btn" data-dismiss="popover-x"> 送出 </button>
-          </div>
-        </div>
       </div>
       <div class="col-2 ">
         <!-- 手機側邊選單 -->
@@ -542,7 +518,7 @@
       </div>
     </div>
 	  
-    <div class="col-lg-12 mb-5 d-none" id="sendInfo"> <a data-toggle="collapse" href="#DeliveryInfo" role="button" aria-expanded="true" aria-controls="DeliveryInfo" class="btn btn-block py-2 shadow-sm with-chevron bg-white">
+    <div class="col-lg-12 mb-5"> <a data-toggle="collapse" href="#DeliveryInfo" role="button" aria-expanded="true" aria-controls="DeliveryInfo" class="btn btn-block py-2 shadow-sm with-chevron bg-white">
       <p class="d-flex align-items-left  mb-0 px-3 py-2"><i class="fa fa-angle-down mr-3 gray-color"></i><strong class="payment-card-titler">寄送資料</strong></p>
       </a>
       <div id="DeliveryInfo" class="collapse shadow-sm show">
@@ -724,7 +700,6 @@
   function invoice_change(e){
     let companyNo = document.querySelector('#companyNo')
     let companyTitle = document.querySelector('#companyTitle')
-    let sendInfo = document.querySelector('#sendInfo')
     if(e.target.value==1){
       companyNo.classList.remove('d-none')
       companyTitle.classList.remove('d-none')
@@ -732,7 +707,6 @@
     }else{
       companyNo.classList.add('d-none')
       companyTitle.classList.add('d-none')
-      sendInfo.classList.add('d-none')
     }
   }
 </script>
