--- a/add-member-2.html
+++ b/add-member-2.html
@@ -361,7 +361,7 @@
                   <div class="col-md-12">
                     <div class="row">
                       <div class="col-lg-4 col-md-12">
-                        <label for="" class=" mt-3">身份證字號<span class="sys-feedback"> * </span></label>
+                        <label for="" class=" mt-3">身份證字號/居留證號最長10碼<span class="sys-feedback"> * </span></label>
                         <input type="input" class="form-control " id="" placeholder="A123456789" value="A123456789" required="required">
                       </div>
                       <div class="col-lg-4 col-md-12">
@@ -502,9 +502,9 @@
             <h5 class="footer-h5">給旅客</h5>
             <ul class="footer-list-unstyled">
               <li class="mb-2"><a href="#">特點</a></li>
-              <li class="mb-2"><a href="#">會員好禮</a></li>
+              <li class="mb-2"><a href="./memberDiscount.html">會員好禮</a></li>
               <li class="mb-2"><a href="#">回饋購物金</a></li>
-              <li class="mb-2"><a href="#">訂閱條款</a></li>
+              <li class="mb-2"><a href="./SubscriptionServices.html">訂閱條款</a></li>
               <li class="mb-2"><a href="Privacy.html">隱私權保護政策</a></li>
               <li class="mb-2"><a href="Terms.html">使用者條款</a></li>
               <li class="mb-2"><a href="#">常見問題</a></li>
