--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
         <li class="item">
           <div class="item_border">
             <div class="like"></div>
-            <a class="image"><span style="background-image: url(img/homebanner/index_h4@2x-100.jpg);"></span></a> 
+            <a class="image"><span style="background-image: url(img/homebanner/index_h3@2x-100.jpg);"></span></a> 
             <div class="text">
               <div class="name">OO飯店</div>
               <div class="bottom">
@@ -920,7 +920,7 @@
         <li class="item">
           <div class="item_border">
             <div class="like active"></div>
-            <a class="image"><span style="background-image: url(img/homebanner/index_h4@2x-100.jpg);"></span></a> 
+            <a class="image"><span style="background-image: url(img/homebanner/index_h3@2x-100.jpg);"></span></a> 
             <div class="text">
               <div class="name">OO飯店</div>
               <div class="bottom">
@@ -937,7 +937,7 @@
         <li class="item">
           <div class="item_border">
             <div class="like active"></div>
-            <a class="image"><span style="background-image: url(img/homebanner/index_h4@2x-100.jpg);"></span></a> 
+            <a class="image"><span style="background-image: url(img/homebanner/index_h3@2x-100.jpg);"></span></a> 
             <div class="text">
               <div class="name">OO飯店</div>
               <div class="bottom">
@@ -954,7 +954,7 @@
         <li class="item">
           <div class="item_border">
             <div class="like active"></div>
-            <a class="image"><span style="background-image: url(img/homebanner/index_h4@2x-100.jpg);"></span></a> 
+            <a class="image"><span style="background-image: url(img/homebanner/index_h3@2x-100.jpg);"></span></a> 
             <div class="text">
               <div class="name">OO飯店</div>
               <div class="bottom">
@@ -971,7 +971,7 @@
         <li class="item">
           <div class="item_border">
             <div class="like active"></div>
-            <a class="image"><span style="background-image: url(img/homebanner/index_h4@2x-100.jpg);"></span></a> 
+            <a class="image"><span style="background-image: url(img/homebanner/index_h3@2x-100.jpg);"></span></a> 
             <div class="text">
               <div class="name">OO飯店</div>
               <div class="bottom">
@@ -1028,9 +1028,9 @@
             <h5 class="footer-h5">給旅客</h5>
             <ul class="footer-list-unstyled">
               <li class="mb-2"><a href="#">特點</a></li>
-              <li class="mb-2"><a href="#">會員好禮</a></li>
+              <li class="mb-2"><a href="./memberDiscount.html">會員好禮</a></li>
               <li class="mb-2"><a href="#">回饋購物金</a></li>
-              <li class="mb-2"><a href="#">訂閱條款</a></li>
+              <li class="mb-2"><a href="./SubscriptionServices.html">訂閱條款</a></li>
               <li class="mb-2"><a href="Privacy.html">隱私權保護政策</a></li>
               <li class="mb-2"><a href="Terms.html">使用者條款</a></li>
               <li class="mb-2"><a href="#">常見問題</a></li>
