--- a/payment-step1-for-business.html
+++ b/payment-step1-for-business.html
@@ -224,7 +224,7 @@
   <nav >
     <ol class="breadcrumb joinit-breadcrumb">
       <li class="breadcrumb-item"><a href="#">首頁</a></li>
-      <li class="breadcrumb-item"><a href="#">購物車</a></li>
+      <li class="breadcrumb-item"><a href="#">結帳頁</a></li>
       <li class="breadcrumb-item active" aria-current="page">訂購清單與付款資訊</li>
     </ol>
   </nav>
@@ -650,9 +650,9 @@
             <h5 class="footer-h5">給旅客</h5>
             <ul class="footer-list-unstyled">
               <li class="mb-2"><a href="#">特點</a></li>
-              <li class="mb-2"><a href="#">會員好禮</a></li>
+              <li class="mb-2"><a href="./memberDiscount.html">會員好禮</a></li>
               <li class="mb-2"><a href="#">回饋購物金</a></li>
-              <li class="mb-2"><a href="#">訂閱條款</a></li>
+              <li class="mb-2"><a href="./SubscriptionServices.html">訂閱條款</a></li>
               <li class="mb-2"><a href="Privacy.html">隱私權保護政策</a></li>
               <li class="mb-2"><a href="Terms.html">使用者條款</a></li>
               <li class="mb-2"><a href="#">常見問題</a></li>
