--- a/payment-step2.html
+++ b/payment-step2.html
@@ -479,9 +479,9 @@
             <h5 class="footer-h5">給旅客</h5>
             <ul class="footer-list-unstyled">
               <li class="mb-2"><a href="#">特點</a></li>
-              <li class="mb-2"><a href="#">會員好禮</a></li>
+              <li class="mb-2"><a href="./memberDiscount.html">會員好禮</a></li>
               <li class="mb-2"><a href="#">回饋購物金</a></li>
-              <li class="mb-2"><a href="#">訂閱條款</a></li>
+              <li class="mb-2"><a href="./SubscriptionServices.html">訂閱條款</a></li>
               <li class="mb-2"><a href="Privacy.html">隱私權保護政策</a></li>
               <li class="mb-2"><a href="Terms.html">使用者條款</a></li>
               <li class="mb-2"><a href="#">常見問題</a></li>
