--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
 <div class="container"> 
   <!--熱門地點 data-limit可設定如果顯示張數小於多少以下 會自動變成滿版 如果不需要設定可設定為0-->
-  <div class="hot_place index_silder mt-5" data-limit="0">
+  <div class="hot_place index_silder" data-limit="0">
     <div class="title">熱門地點</div>
     <div class="outside">
       <div class="arrows"><a class="arrow arrow-prev"></a><a class="arrow arrow-next"></a></div>
