--- a/Privacy.html
+++ b/Privacy.html
@@ -320,10 +320,10 @@
           <div class=" col-lg-4 col-xs-12">
             <h5 class="footer-h5">認識在一起</h5>
             <ul class="footer-list-unstyled">
-              <li class="mb-2"><a href="#">關於我們</a></li>
-              <li class="mb-2"><a href="#">品牌故事</a></li>
+              <li class="mb-2"><a href="./aboutus.html">關於我們</a></li>
+              <li class="mb-2"><a href="./story.html">品牌故事</a></li>
               <li class="mb-2"><a href="#">官方部落格</a></li>
-              <li class="mb-2"><a href="#">媒體報導</a></li>
+              <li class="mb-2"><a href="./media.html">媒體報導</a></li>
             </ul>
           </div>
           <div class="col-lg-4  col-xs-12">
@@ -339,7 +339,7 @@
               <li class="mb-2"><a href="contactus.html">聯絡我們</a></li>
             </ul>
           </div>
-          <div class="col-lg-4  col-xs-12">
+          <div class="col-lg-4  col-xs-12" style="display: none;">
             <h5 class="footer-h5">在一起合作夥伴</h5>
             <ul class="footer-list-unstyled">
               <li class="mb-2"><a href="#">成為供應商</a></li>
