--- a/media.html
+++ b/media.html
@@ -231,15 +231,9 @@
 <!-- 上方客製化選單 -->
 <div class="container ">
   <ul class="mb-4 joinit-links ">
-    <li class="nav-item "> <a class="nav-link" href="#">特點</a> </li>
-    <li class="nav-item"> <a class="nav-link" href="./memberDiscount.html">會員好禮</a> </li>
-    <li class="nav-item "> <a class="nav-link" href="#">回饋購物金</a> </li>
-    <li class="nav-item "> <a class="nav-link" href="SubscriptionServices.html">訂閱條款</a> </li>
-    <li class="nav-item"> <a class="nav-link" href="Privacy.html">隱私權保護政策</a> </li>
-    <li class="nav-item"> <a class="nav-link active" href="Terms.html">使用者條款</a> </li>
-    <li class="nav-item"> <a class="nav-link" href="#">常見問題</a> </li>
-	  <!-- 20210604 修改 -->
-    <li class="nav-item"> <a class="nav-link" href="contactus.html">聯絡我們</a> </li>
+    <li class="nav-item "> <a class="nav-link" href="./aboutus.html">關於我們</a> </li>
+    <li class="nav-item"> <a class="nav-link" href="./story.html">品牌故事</a> </li>
+    <li class="nav-item "> <a class="nav-link active" href="./media.html">媒體報導</a> </li>
   </ul>
 </div>
 
@@ -313,7 +307,7 @@
               <li class="mb-2"><a href="contactus.html">聯絡我們</a></li>
             </ul>
           </div>
-          <div class="col-lg-4  col-xs-12">
+          <div class="col-lg-4  col-xs-12" style="display: none;">
             <h5 class="footer-h5">在一起合作夥伴</h5>
             <ul class="footer-list-unstyled">
               <li class="mb-2"><a href="#">成為供應商</a></li>
