--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-lg-4 col-xs-12 py-3 text-center">
-          <button class="btn btn-lg btn-join-search " type="button"><img src="img/icon_search_1.svg" class="search-icon" > 立即搜尋 </button>
+          <div class="btn-join-search"><img src="img/icon_search_1.svg" class="search-icon" > 立即搜尋 </div>
         </div>
       </div>
     </div>
